syntax = "proto2";

package ates;

message TaskAssigned {
  required string task_id = 1;
  required string user_id = 2;
}
