syntax = "proto2";

package ates;

message TaskClosed {
  required string task_id = 1;
  required string user_id = 2;
}
